--- a/My-First-React/src/index.css
+++ b/My-First-React/src/index.css
@@ -1,4 +1,4 @@
-.Card{
+/* .Card{
   border-color: 1px bold hsl(0, 1%, 80%);
   border-radius: 10px;
   box-shadow: 5px 5px 5px hsla(0, 0%, 0.5%);
@@ -13,4 +13,26 @@
   height: auto;
   border-radius: 50%;
   margin-bottom: 10px;
+} */
+
+.student{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  width: 250px;
+padding-left: 20px;
+border: 1px solid hsla(0, 0%, 50%, 0.30);
+margin: 20px;
+
+}
+
+.category{
+font-family: 'Times New Roman', Times, serif;
+font-size: 25px;
+border: 1px;
+border-radius: 5px;
+background-color: aqua;
+}
+.listitem{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
 }
